feat: support url refresh, dl cache, dl retry, logger, docker compose,  drizzle db

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules
 # Keep environment variables out of version control
 .env
-generated/prisma/
 .PGDATA
+.PGDATA_DRIZZLE
 waw.mp4
+.cache
+app.log
