--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:15.6-alpine
     volumes:
-      - .PGDATA:/var/lib/postgresql/data/
+      - .PGDATA_DRIZZLE:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -12,3 +10,14 @@ services:
       - POSTGRES_PORT=5432
     ports:
       - 5432:5432
+  dstorage:
+    build:
+      context: .
+    env_file:
+      - .env
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/src
+      - '/src/node_modules'
+    restart: always
