--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "drizzle.config.ts"],
+  "include": ["src/**/*.ts", "drizzle.config.ts", "server.ts"],
   "exclude": ["dist"]
 }
